--- a/src/pages/Signup/Signup.css
+++ b/src/pages/Signup/Signup.css
@@ -82,7 +82,7 @@ a {
 	overflow: hidden;
 	width: 768px;
 	max-width: 100%;
-	min-height: 480px;
+	min-height: 37rem;
 }
 
 .form-container {
@@ -166,4 +166,19 @@ a {
 	margin: 0 5px;
 	height: 40px;
 	width: 40px;
+}
+@media screen and (max-width: 768px) {
+	.loginContainer {
+		position: inherit;
+		min-height: 100vh;
+	}
+	.form-container {
+		min-width: 100vw;
+	}
+	.mobileLogo {
+		display: flex;
+	}
+	.mobile-disclaimer {
+		display: flex;
+	}
 }
